<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">


    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helve_bold"
                android:text="@string/okey"
                android:textColor="@color/secondary"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/helve_bold"
                android:text="@string/matjar"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/credit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helve_regular"
            android:text="@string/creditTitle" />

        <TextView
            android:id="@+id/txtDeveloperCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/helve_regular"
            android:text="@string/creditName"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/sign_buttons"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="top|center"
        android:layout_marginBottom="-40dp"
        android:orientation="vertical"
        android:background="@drawable/background_primary">

        <RelativeLayout
            android:id="@+id/line"
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@color/smothWite"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_below="@+id/line"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/txtlogin"
            android:textColor="@color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/helve_bold"
            android:textAllCaps="false"
            android:textDirection="anyRtl"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_danger"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_below="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/txt_register"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/helve_bold"
            android:textAllCaps="false"
            android:textDirection="anyRtl"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background_primary_dark"/>


        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textStyle="bold"
                android:textColor="@color/white"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>