<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_pop_up"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:id="@+id/layout_error_alert"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:visibility="visible"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_error_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtlogin"
                android:visibility="invisible"
                android:textColor="@color/danger"
                android:fontFamily="@font/helve_bold"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/helve_regular"
                android:text="@string/emergency"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:fontFamily="@font/helve_regular"
                android:text="@string/note_car_emergency"/>

            <Button
                android:id="@+id/btn_start_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_background_primary_dark"
                android:fontFamily="@font/helve_bold"
                android:text="حالة التاهب لاي طارئ"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textDirection="anyRtl"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:visibility="visible" />


            <Button
                android:id="@+id/btn_cancel_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_background_danger"
                android:fontFamily="@font/helve_bold"
                android:text="الغاء حالة التاهب"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textDirection="anyRtl"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:visibility="visible" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>